# chessboard-recognizer

./: .pre-commit-config.yaml  generate_chessboards.py  pyproject.toml  recognize.py  requirements.txt  train.py
