[tool.poetry]
name = "chessboard-recognizer"
version = "0.1.0"
description = "Forked from linrock/chessboard-recognizer"
authors = ["corentings <contact@corentings.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.2"
pillow = "^10.4.0"
tf-keras = ">=2.16,<3.0"

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
